--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Home</title>
+	<!-- FontAwesome 4.7.0 CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Bootstrap 5.0 CSS-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+	<!-- Custom CSS -->
 	<link rel="stylesheet" href="css/styles.css" />
 </head>
 
@@ -170,6 +174,26 @@
 		</div>
 		<!-- New Releases / Slider Ended-->
 	</main>
+
+
+	<div class="container">
+		<footer class="py-3 my-4">
+			<ul class="nav justify-content-center border-bottom pb-3 mb-3">
+				<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+				<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Top Rated</a></li>
+				<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Recent</a></li>
+				<li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+			</ul>
+			<div class="d-flex flex-column flex-md-row justify-content-between">
+				<p class="text-center text-muted">&copy; 2021 Company, Inc</p>
+				<div class="d-flex justify-content-center">
+					<a href="#" class="text-muted mx-2"><i class="fa fa-2x fa-facebook-square"></i></a>
+					<a href="#" class="text-muted mx-2"><i class="fa fa-2x fa-twitter-square"></i></a>
+					<a href="#" class="text-muted mx-2"><i class="fa fa-2x fa-instagram"></i></a>
+				</div>
+			</div>
+		</footer>
+	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
