--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<a class="nav-link" href="#">About</a>
 						</li>
 						<li>
-							<a class="btn nav-btn mx-lg-2" href="#">Login</a>
+							<a class="btn nav-btn mx-lg-2" href="login.html">Login</a>
 						</li>
 					</ul>
 				</div>
