Slider Card Updated

--- a/index.html
+++ b/index.html
@@ -106,30 +106,65 @@
 				<div class="card">
 					<img src="https://s.yimg.com/uu/api/res/1.2/0GBXd289dMqVEPaqTl4x5w--~B/aD0xNTAwO3c9MTAzNTthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en/homerun/feed_manager_auto_publish_494/d05a3f087fa57f6d41b865d53a42a5f5"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://www.adobe.com/express/create/poster/media_14f888136eecf9b6e4d83386789e660f15349f96c.jpeg?width=400&format=jpeg&optimize=medium"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Cosmic Overload</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/action-movie-poster-template-design-0f5fff6262fdefb855e3a9a3f0fdd361_screen.jpg?ts=1636996054"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Freedom</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://media.comicbook.com/2017/10/iron-man-movie-poster-marvel-cinematic-universe-1038878.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Iron Man</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/movie-poster-template-design-21a1c803fe4ff4b858de24f5c91ec57f_screen.jpg?ts=1636996180"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>After</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://marketplace.canva.com/EAFGp0oUGHc/2/0/1131w/canva-futuristic-sci-fi-film-poster-uFu-yo8ZA-U.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Ascend</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://product-image.juniqe-production.juniqe.com/media/catalog/product/seo-cache/x800/171/230/171-230-101P/The-Shining-Retro-Movie-Poster-Vintage-Photography-Archive-Poster.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>The Shining</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -145,30 +180,65 @@
 				<div class="card">
 					<img src="https://media.comicbook.com/2017/10/iron-man-movie-poster-marvel-cinematic-universe-1038878.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://marketplace.canva.com/EAFGp0oUGHc/2/0/1131w/canva-futuristic-sci-fi-film-poster-uFu-yo8ZA-U.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://product-image.juniqe-production.juniqe.com/media/catalog/product/seo-cache/x800/171/230/171-230-101P/The-Shining-Retro-Movie-Poster-Vintage-Photography-Archive-Poster.jpg"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/movie-poster-template-design-21a1c803fe4ff4b858de24f5c91ec57f_screen.jpg?ts=1636996180"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://s.yimg.com/uu/api/res/1.2/0GBXd289dMqVEPaqTl4x5w--~B/aD0xNTAwO3c9MTAzNTthcHBpZD15dGFjaHlvbg--/http://media.zenfs.com/en/homerun/feed_manager_auto_publish_494/d05a3f087fa57f6d41b865d53a42a5f5"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://www.adobe.com/express/create/poster/media_14f888136eecf9b6e4d83386789e660f15349f96c.jpeg?width=400&format=jpeg&optimize=medium"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 				<div class="card">
 					<img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/action-movie-poster-template-design-0f5fff6262fdefb855e3a9a3f0fdd361_screen.jpg?ts=1636996054"
 						alt="">
+					<span class="rating">7.8⭐</span>
+					<div class="card-body">
+						<p>Moonlight</p>
+						<button class="btn"><i class="fa fa-bookmark"></i> Watchlist</button>
+					</div>
 				</div>
 			</div>
 		</div>
